type hints were not actually type hints fml

--- a/mapreduce/makefile
+++ b/mapreduce/makefile
@@ -1,9 +1,9 @@
 .PHONY : run
 
 run:
-	python3 movies_ranked.py u.data
+	python3 movies_ranked.py ../u.data
 
 sorted:
-	python3 movies_ranked_sorted.py u.data
+	python3 movies_ranked_sorted.py ../u.data
 
 
